@@ -2,6 +2,10 @@ Revision history for Perl extension Fl
 
 {{$NEXT}}
 
+    - New widgets:
+        - Fl::Tabs - "File card tabs" interface
+    - New demo script: eg/tabs.pl
+
 0.99.10 2016-06-04T00:08:58Z
 
     - New widgets:
